// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCardWithAction /> by default matches with snapshot 1`] = `
<div
  className="sc-bxivhb dluWKp"
>
  <div
    className="k-u-margin-bottom-triple"
  >
    <img
      alt=""
      className="k-VerticalCardWithAction__image"
      src="#image"
    />
  </div>
  <div
    className="k-VerticalCardWithAction__text k-u-margin-top-triple k-u-margin-bottom-triple"
  >
    <h1
      className="sc-bdVaJa jvmDNn k-Title k-u-align-center k-Title--senary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Custom title
    </h1>
    
  </div>
  <div
    className="k-u-margin-top-triple k-u-align-center"
  >
    <button
      className="sc-htpNat kbJDRB k-Button k-VerticalCardWithAction__button k-Button--regular k-Button--helium k-Button--andromeda"
      href={null}
      onClick={null}
      style={
        Object {
          "--border-radius": 0,
        }
      }
      type="button"
    >
      button
    </button>
  </div>
</div>
`;

exports[`<VerticalCardWithAction /> with some props matches with snapshot 1`] = `
<div
  className="sc-bxivhb dluWKp"
>
  <div
    className="k-u-margin-bottom-triple"
  >
    <img
      alt="Image alt"
      className="k-VerticalCardWithAction__image"
      src="#image"
    />
  </div>
  <div
    className="k-VerticalCardWithAction__text k-u-margin-top-triple k-u-margin-bottom-triple"
  >
    <h1
      className="sc-bdVaJa jvmDNn k-Title k-u-align-center k-u-margin-bottom-singleHalf k-Title--senary k-Title--noMargin"
      style={
        Object {
          "--Title-css-color": null,
        }
      }
    >
      Custom title
    </h1>
    <p
      className="sc-bwzfXH ggISLb k-Paragraph k-u-align-center k-u-margin-top-singleHalf k-Paragraph--tertiary k-Paragraph--noMargin"
    >
      Custom text
    </p>
  </div>
  <div
    className="k-u-margin-top-triple k-u-align-center"
  >
    <button
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
      className="sc-htpNat kbJDRB k-Button k-VerticalCardWithAction__button k-Button--regular k-Button--helium k-Button--andromeda"
=======
      className="sc-htpNat xAhKr k-Button k-VerticalCardWithAction__button k-Button--regular k-Button--helium k-Button--andromeda"
>>>>>>> ebed71072 (Test)
=======
      className="sc-htpNat jPaiVJ k-Button k-VerticalCardWithAction__button k-Button--regular k-Button--helium k-Button--andromeda"
>>>>>>> 8c3cad0b4 (Update button test)
=======
      className="sc-htpNat kbJDRB k-Button k-VerticalCardWithAction__button k-Button--regular k-Button--helium k-Button--andromeda"
>>>>>>> 56f82ed88 (Remove small prop)
      href={null}
      onClick={null}
      style={
        Object {
          "--border-radius": 0,
        }
      }
      type="button"
    >
      button
    </button>
  </div>
</div>
`;
